# super-project

./: CMakeLists.txt  appveyor.yml  build.cmd
apps/: CMakeLists.txt  solanet-desktop.cmake
libs/: CMakeLists.txt  libboost.cmake  libmodbus.cmake  libssh.cmake  libtinyxml2.cmake  openssl.cmake  qt.cmake  zlib.cmake
mk/: compiler.cmake
tools/: CMakeLists.txt  cmake.cmake  jom.cmake  ninja.cmake  opkg.cmake  perl.cmake  python.cmake
